--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "scripts": {
         "start": "node index.js",
         "test": "node test.js",
-        "test2": "nodemon index.js"
+        "test2": "nodemon index.js",
+        "lint": "eslint ."
     },
     "keywords": [
         "termux-whatsapp-bot",
